# BuddyCast

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
fixtures/: contents.sample.json  expected.ass  expected_db.json  manifest.json  sample.db  subtitles_ja.oxk.decrypted
src/: api.rs  archive.rs  cli.rs  db.rs  decrypt.rs  error.rs  lib.rs  main.rs  model.rs  progress.rs  subtitle.rs  workflow.rs
tests/: api.rs  db.rs  decrypt.rs  subtitle.rs  workflow.rs
